Grid is now an interface; ArrayGrid and HashGrid are two implementations.